--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -26,7 +26,8 @@ span.scoretag.passive{
 }
 
 span.scoretag.active{
-  background-color: $dgl-purple; color: $dgl-lightergray;
+  background-color: $dgl-purple;
+  color: lighten($dgl-lightestgray, 10%);
 }
 
 span{
@@ -40,7 +41,25 @@ span{
   background-size: cover;
 }
 
+.background-active-tournament{
+  background-image: url('/storage/hearthstone2.jpg');
+  background-size: cover;
+  background-position: top;
+}
 
+.background-upcoming-tournament{
+  background-image: url('/storage/hanzogenji.png');
+  background-size: cover;
+  background-position: top;
+}
+
+.background-past-tournament{
+  background-image: url('/storage/lc.png');
+  //background-color: #f9f9f9;
+  background-size: contain;
+  background-position: bottom;
+  background-repeat: no-repeat;
+}
 .jumbotron-atournament{
   background-size: cover !important;
   background-position: center !important;
@@ -210,6 +229,7 @@ span{
     top: 0;
     left: 0;
     z-index: 3;
+    background: linear-gradient(315deg, $dgl-purple, $dgl-purple, rgba(20,8,5,0.6), rgba(20,8,5,0.75));
   }
   .slide-text{
     color: $dgl-blue;
@@ -401,7 +421,7 @@ body{
       a{
         color: #FFF;
         &:hover{
-          color: $dgl-purple;
+          color: $dgl-primary;
         }
 
       }
@@ -414,7 +434,7 @@ body{
       margin-right: 10px;
       background-color: $dgl-lightergray;
       &:hover{
-        background-color: $dgl-red;
+        background-color: $dgl-orange;
 
         a{
           color: #FFF;
@@ -466,14 +486,14 @@ body{
     font-weight: 700;
 
     &:hover{
-      color: $dgl-blue;
+      color: $dgl-orange;
       text-decoration: none;
     }
   }
 
   .team-logo-300-gray{
     width: 100%;
-    background-color: $dgl-lightergray;
+    background-color: lighten($dgl-lightestgray, 15%);
   }
 
   .team-logo-300{
@@ -559,7 +579,7 @@ body{
     }
     &:hover{
       background-color: $dgl-purple;
-      border-color: $dgl-purple;
+      border-color: $dgl-primary;
       .btn-dgl{
         color: #FFF !important;
       }
@@ -567,12 +587,16 @@ body{
   }
 
   .btn-dgl-container-gray{
+    padding: 0;
+    background-color: transparent;
+    display: inline-block;
+    transform: skewX(-10deg);
     border: 3px solid $dgl-gray;
     &:hover{
       border: 3px solid $dgl-gray;
-      background-color: $dgl-gray;
+      background-color: $dgl-lightestgray;
       .btn-dgl{
-        color: #FFF !important;
+        //color: #FFF !important;
       }
     }
     .btn-dgl{
@@ -581,15 +605,15 @@ body{
   }
 
   .btn-dgl-container-primary{
-    border: 3px solid $dgl-primary;
+    border: 3px solid $dgl-orange;
     .btn-dgl{
       color: $dgl-primary !important;
     }
     &:hover{
       border: 3px solid $dgl-primary;
-      background-color: $dgl-primary;
+      background-color: $dgl-orange;
       .btn-dgl{
-        color: $dgl-purple !important;
+        //color: $dgl-purple !important;
       }
     }
   }
@@ -623,6 +647,16 @@ body{
     }
   }
 
+  .nav-simple{
+    li{
+      a{
+        &:hover{
+          color: $dgl-purple;
+        }
+      }
+
+    }
+  }
   .nav{//bootstrap-override - for atournament page
 
 
@@ -804,6 +838,12 @@ body{
         margin-top : 5px;
       }
     }
+    span{
+      h1,h2,h3,h4,h5,h6{
+        //color: lighten($dgl-lightestgray,25%);
+        color: $dgl-orange;
+      }
+    }
   }
 
   .post-body-hover{
@@ -814,7 +854,8 @@ body{
       cursor: pointer;
       //border: 1px solid $dgl-purple;
       span{
-        p, h1,h2,h3,h4,h5,h6{
+        p//, h1,h2,h3,h4,h5,h6{
+        {
           //color: lighten($dgl-lightestgray,25%);
           color: $dgl-almostwhite;
         }
